1) minor copy change to "about" box and changed colour of the header 2) fixed the z-index of the stats widget so that doesn't show on top of the simple modal semitransparent background

--- a/simpleModal/css/basic.css
+++ b/simpleModal/css/basic.css
@@ -22,4 +22,4 @@
 #simplemodal-container code {background:#141414; border-left:3px solid #65B43D; color:#bbb; display:block; font-size:12px; margin-bottom:12px; padding:4px 6px 6px;}
 #simplemodal-container a {color:#ddd;}
 #simplemodal-container a.modalCloseImg {background:url(../img/basic/x.png) no-repeat; width:25px; height:29px; display:inline; z-index:3200; position:absolute; top:-15px; right:-16px; cursor:pointer;}
-#simplemodal-container h3 {color:#84b8d9;}
+#simplemodal-container h3 {color:#faa;}
